# serializer version: 1
# name: TestCreateOTU.test_empty_success
  dict({
    'acronym': '',
    'excluded_accessions': set({
    }),
    'legacy_id': None,
    'name': 'Cabbage leaf curl Jamaica virus',
    'schema': dict({
      'molecule': dict({
        'strandedness': 'double',
        'topology': 'circular',
        'type': 'DNA',
      }),
      'multipartite': True,
      'segments': list([
        dict({
          'length': 2575,
          'name': 'DNA-A',
          'required': True,
        }),
        dict({
          'length': 2494,
          'name': 'DNA-B',
          'required': True,
        }),
      ]),
    }),
    'taxid': 345184,
  })
# ---
# name: TestCreateOTUCommands.test_autofill_ok
  dict({
    'molecule': dict({
      'strandedness': 'double',
      'topology': 'circular',
      'type': 'DNA',
    }),
    'multipartite': True,
  })
# ---
# name: TestCreateOTUCommands.test_autofill_ok.1
  dict({
    'length': 2575,
    'name': 'DNA-A',
    'required': True,
  })
# ---
# name: TestCreateOTUCommands.test_autofill_ok.2
  dict({
    'length': 2494,
    'name': 'DNA-B',
    'required': True,
  })
# ---
# name: TestCreateOTUCommands.test_ok[1278205-accessions0]
  dict({
    'acronym': '',
    'excluded_accessions': set({
      'JX263426',
    }),
    'legacy_id': None,
    'name': 'Dahlia latent viroid',
    'schema': dict({
      'molecule': dict({
        'strandedness': 'single',
        'topology': 'linear',
        'type': 'RNA',
      }),
      'multipartite': False,
      'segments': list([
        dict({
          'length': 342,
          'name': 'genomic RNA',
          'required': True,
        }),
      ]),
    }),
    'taxid': 1278205,
  })
# ---
# name: TestCreateOTUCommands.test_ok[345184-accessions1]
  dict({
    'acronym': '',
    'excluded_accessions': set({
    }),
    'legacy_id': None,
    'name': 'Cabbage leaf curl Jamaica virus',
    'schema': dict({
      'molecule': dict({
        'strandedness': 'double',
        'topology': 'circular',
        'type': 'DNA',
      }),
      'multipartite': True,
      'segments': list([
        dict({
          'length': 2575,
          'name': 'DNA-A',
          'required': True,
        }),
        dict({
          'length': 2494,
          'name': 'DNA-B',
          'required': True,
        }),
      ]),
    }),
    'taxid': 345184,
  })
# ---
# name: TestUpdateOTU.test_without_exclusions_ok
  list([
    dict({
      'acronym': '',
      'excluded_accessions': set({
      }),
      'legacy_id': None,
      'name': 'Apple rubbery wood virus 1',
      'schema': dict({
        'molecule': dict({
          'strandedness': 'single',
          'topology': 'linear',
          'type': 'RNA',
        }),
        'multipartite': True,
        'segments': list([
          dict({
            'length': 7219,
            'name': 'L',
            'required': True,
          }),
          dict({
            'length': 1613,
            'name': 'M',
            'required': True,
          }),
          dict({
            'length': 1291,
            'name': 'S',
            'required': True,
          }),
        ]),
      }),
      'taxid': 2164102,
    }),
  ])
# ---
